Form works and creates to post page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,8 +3,12 @@
 }
 
 body {
-    background-color: black;
+    background-color: red;
     color: whitesmoke;
     margin: 0;
     padding: 0;
+}
+
+form {
+    display: grid;
 }
